# lengwurds

./: .gitignore  Cargo.toml  vars.env
.github/workflows/: main.yml
front/: front.js  pubspec.yaml
front/lib/: main.dart  main.g.dart
front/web/: index.html
scripts/: lengwurds.service
src/: main.rs
src/api/: api.rs  front.rs  mod.rs  params.rs
src/storage/: mod.rs  strategy.rs
src/telegram/: client.rs  commands.rs  mod.rs  updates.rs
src/translate/: google.rs  mod.rs
src/user/: user.rs
