[package]
name = "lengwurds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.8.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_qs = { version = "0.8.5" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
hyper-tls = "0.5"
regex = "1"
rand = "0.8.4"